@@ -1,3 +1,10 @@
+2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b2
+
+ * Change: When a new user is added and the username is invalid,
+		   the display was not sanitized for all cases.
+
+		   Better/more detailed information from the user integrity check.
+
 2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b1
 
  * Changes:
